--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,13 @@ body{
 }
 
 #main-header{
-    background-color: cornflowerblue;
+    background-color: #0D61FF;
     color:#fff;
 
 }
 
 #navbar{
-    background-color: #333;
+    background-color: #1D2227;
     color:#fff;
 
 }
@@ -50,13 +50,13 @@ body{
     background-position:center right;
     min-height:300px;
     margin-bottom: 30px;
-    text-align:center;
+    text-align:left;
 
 }
 
 #showcase h1{
     color:#ffffff;
-    font-size: 50px;
+    font-size: 40px;
     line-height: 1.6em;
     padding-top:30px ;
 }
@@ -76,8 +76,6 @@ body{
     color:#fff;
     padding: 10px;
     box-sizing: border-box;
-    border-style: solid;
-    border-width: thick;
 
 }
 
